# SmartFood-QA

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README_divya.md  bestmodel.keras  requirements_actions.txt  start.sh
.github/workflows/: deploy.yml  python.yml  rust.yml
cloud/: pyvenv.cfg
rust_api/: Cargo.toml
rust_api/src/: main.rs
ui/: app.py  requirements.txt  test.py  test_app.py
