[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.13"}
tokio = {  version = "0.2", features = ["macros", "rt-threaded"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
llm = { git = "https://github.com/rustformers/llm.git" }
rand = "0.8.5"
actix-web = "4.5.1"
actix-cors = "0.7.0"
handlebars = "3.0"
